--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -509,4 +509,10 @@ div.tooltip:before {
             }
         }*/
     }
+    &--footer {
+        .main-footer__box;
+        .main-footer__box--copyright;
+        max-width: @breakpoint-lg;
+        margin: 0 auto;
+    }
 }
