--- a/libs/jade/extent.jade
+++ b/libs/jade/extent.jade
@@ -13,12 +13,18 @@ block breadcrumbs
 		{title: "Extent switcher"}])
 
 block sidebar
-	- var section = "Section title"
-	// Set the number at the end to the array position of the active page
+	- var section = "Modules"
 	+sidebar([
-		{title: "Sibling page 1"},
-		{title: "Sibling page 2"}],
-		0)
+		{href: "callout.html", title: "Callout"},
+		{href: "collapse.html", title: "Collapse"},
+		{href: "charts.html", title: "Charts"},
+		{href: "section-notice.html", title: "Section Notices"},
+		{href: "toolbar.html", title: "Content toolbar"},
+		{href: "cookie-monster.html", title: "Cookie Monster"},
+		{href: "extent.html", title: "Extent Switcher"},
+		{href: "overlay.html", title: "Modal/Overlay"},
+		{href: "reference.html", title: "Reference tool"}
+	],6)
 
 block content
 	#simpleModal.modal
