--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -48,6 +48,10 @@ html
 					button.btn.cookie-monster__close(data-action="close", type="button") Close
 
 		if mockup
+			header.styleguide--header.mockup
+				.styleguide--header--content
+					a(href="index.html")
+						img(src="assets/images/ca-logo-hz-white-280px.svg")
 			header.main-header
 				.main-header__content
 					a.main-header__logo.no-print(href="", title="Citizens Advice home")
@@ -125,7 +129,8 @@ html
 		else
 			header.styleguide--header
 				.styleguide--header--content
-					img(src="assets/images/ca-logo-hz-white-280px.svg")
+					a(href="index.html")
+						img(src="assets/images/ca-logo-hz-white-280px.svg")
 			//header.main-header
 				.main-header__content.main-content
 					a.main-header__logo.no-print(href="index.html", title="Citizens Advice home")
