Changed footer logo to svg

--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -261,7 +261,7 @@ html
 					.main-footer__box.main-footer__box--copyright
 						div
 							p 
-								img(alt="", height="100", src="assets/images/ca-logo_100px.svg.png", width="100")
+								img(alt="", height="100", src="assets/images/ca-logo_100px.svg", width="100")
 								| Copyright © 2015 Citizens Advice. All rights reserved.
 								br
 								| Citizens Advice is an operating name of the National Association of Citizens Advice Bureaux. Registered charity number 279057
@@ -275,7 +275,7 @@ html
 				.styleguide--footer
 					div
 						p
-							img(alt="", height="100", src="assets/images/ca-logo_100px.svg.png", width="100")
+							img(alt="", height="100", src="assets/images/ca-logo_100px.svg", width="100")
 							| Copyright © 2015 Citizens Advice. All rights reserved.
 							br
 							| Citizens Advice is an operating name of the National Association of Citizens Advice Bureaux. Registered charity number 279057
