--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -48,17 +48,17 @@ html
 					button.btn.cookie-monster__close(data-action="close", type="button") Close
 
 		if mockup
-			header.styleguide--header.mockup
+			//header.styleguide--header.mockup
 				.styleguide--header--content
 					a(href="index.html")
 						img(src="assets/images/ca-logo-hz-white-280px.svg")
 			header.main-header
 				.main-header__content
-					a.main-header__logo.no-print(href="", title="Citizens Advice home")
+					a.main-header__logo.no-print(href="index.html", title="Citizens Advice home")
 						img(alt="Citizens Advice", src="assets/images/ca-logo_100px.svg")
-					a.main-header__logo.no-print.wide(href="", title="Citizens Advice home")
+					a.main-header__logo.no-print.wide(href="index.html", title="Citizens Advice home")
 						img(alt="Citizens Advice", src="assets/images/ca-logo-hz-white-280px.svg")
-					a.main-header__logo.print-only(href="", title="Citizens Advice home")
+					a.main-header__logo.print-only(href="index.html", title="Citizens Advice home")
 						img(alt="Citizens Advice", src="assets/images/ca-logo-hz-280px.svg")
 
 					.main-header__links(data-track-zone="top-bar")
