--- a/libs/jade/typography.jade
+++ b/libs/jade/typography.jade
@@ -36,15 +36,15 @@ block content
 			p(style="font-weight: 800;") Open Sans 800 
 				span.code @font-weight-boldest
 			p Typographic styles for content specific pages. See #[a(href="#") content guidelines] for how to write content.
-			h1 h1 for page titles
+			h1 h1 for page titles 
 				span.code @font-size-h1
-			h2 h2 sub header, for section titles
+			h2 h2 sub header, for section titles 
 				span.code @font-size-h2
-			h3 h3 for headings within sections
+			h3 h3 for headings within sections 
 				span.code @font-size-h3
-			h4 h4
+			h4 h4 
 				span.code @font-size-h4
-			h5 h5
+			h5 h5 
 				span.code @font-size-h5
 			p.u-lede This is a lead paragraph of text. Only use one of these per page, or not at all. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 				span.code @u-lede
@@ -54,18 +54,25 @@ block content
 			h3 h3 header within sub header
 			p This is a paragraph of text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
 			h3 Links
-			ul
-				li This is a standard text #[a(href="#") with a link] and an external.
-				li This is a standard text #[a.a-external-link(href="#") with an external link].
-					span.codea-external-link</span>
-				li This is a standard text #[a.a-pdf-doc(href="#") with a link to a pdf document].
-					span.codea-pdf-doc</span>
-				li This is a standard text #[a.a-file-doc(href="#") with a link to a html or text file].
-					span.codea-file-doc</span>
-				li This is a standard text #[a.a-word-doc(href="#") with a link to a word document].
-					span.codea-word-doc</span>
-				li This is a standard text #[a.a-excel-doc(href="#") with a link to a excel document].
-					span.codea-excel-doc</span>
+			.example-box-plain
+				ul
+					li This is a standard text #[a(href="#") with a link] and an external.
+					li This is a standard text #[a.a-external-link(href="#") with an external link].
+					li This is a standard text #[a.a-pdf-doc(href="#") with a link to a pdf document].
+					li This is a standard text #[a.a-file-doc(href="#") with a link to a html or text file].
+					li This is a standard text #[a.a-word-doc(href="#") with a link to a word document].
+					li This is a standard text #[a.a-excel-doc(href="#") with a link to a excel document].
+			pre
+				code.language-html
+					| &lt;ul&gt;
+					| 	&lt;li&gt;This is a standard text &lt;a href="#"&gt;with a link&lt;/a&gt; and an external.&lt;/li&gt;
+					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-external-link"&gt;with an external link&lt;/a&gt;.&lt;span class="codea-external-link"&gt;&lt;/span&gt;&lt;/li&gt;
+					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-pdf-doc"&gt;with a link to a pdf document&lt;/a&gt;.&lt;span class="codea-pdf-doc"&gt;&lt;/span&gt;&lt;/li&gt;
+					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-file-doc"&gt;with a link to a html or text file&lt;/a&gt;.&lt;span class="codea-file-doc"&gt;&lt;/span&gt;&lt;/li&gt;
+					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-word-doc"&gt;with a link to a word document&lt;/a&gt;.&lt;span class="codea-word-doc"&gt;&lt;/span&gt;&lt;/li&gt;
+					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-excel-doc"&gt;with a link to a excel document&lt;/a&gt;.&lt;span class="codea-excel-doc"&gt;&lt;/span&gt;&lt;/li&gt;
+					| &lt;/ul&gt;
+
 			h3 Standard unordered list
 			ul
 				li Lorem ipsum dolor sit amet
