--- a/libs/jade/typography.jade
+++ b/libs/jade/typography.jade
@@ -66,11 +66,11 @@ block content
 				code.language-html
 					| &lt;ul&gt;
 					| 	&lt;li&gt;This is a standard text &lt;a href="#"&gt;with a link&lt;/a&gt; and an external.&lt;/li&gt;
-					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-external-link"&gt;with an external link&lt;/a&gt;.&lt;span class="codea-external-link"&gt;&lt;/span&gt;&lt;/li&gt;
-					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-pdf-doc"&gt;with a link to a pdf document&lt;/a&gt;.&lt;span class="codea-pdf-doc"&gt;&lt;/span&gt;&lt;/li&gt;
-					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-file-doc"&gt;with a link to a html or text file&lt;/a&gt;.&lt;span class="codea-file-doc"&gt;&lt;/span&gt;&lt;/li&gt;
-					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-word-doc"&gt;with a link to a word document&lt;/a&gt;.&lt;span class="codea-word-doc"&gt;&lt;/span&gt;&lt;/li&gt;
-					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-excel-doc"&gt;with a link to a excel document&lt;/a&gt;.&lt;span class="codea-excel-doc"&gt;&lt;/span&gt;&lt;/li&gt;
+					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-external-link"&gt;with an external link&lt;/a&gt;.&lt;/li&gt;
+					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-pdf-doc"&gt;with a link to a pdf document&lt;/a&gt;.&lt;/li&gt;
+					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-file-doc"&gt;with a link to a html or text file&lt;/a&gt;.&lt;/li&gt;
+					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-word-doc"&gt;with a link to a word document&lt;/a&gt;.&lt;/li&gt;
+					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-excel-doc"&gt;with a link to a excel document&lt;/a&gt;.&lt;/li&gt;
 					| &lt;/ul&gt;
 
 			h3 Standard unordered list
