Change PIP nav example

--- a/libs/jade/pip-dressing.jade
+++ b/libs/jade/pip-dressing.jade
@@ -21,20 +21,20 @@ block sidebar
     - var section = "Help filling in your PIP2 form"
     +sidebar([
         {title: "General Advice"},
-        {title: "Q2 About your health conditions or disabilities"},
+        //{title: "Q2 About your health conditions or disabilities"},
         {title: "Q3 Preparing Food"},
-        {title: "Q4 Eating and drinking"},
-        {title: "Q5 Managing treatments"},
-        {title: "Q6 Washing and bathing"},
-        {title: "Q7 Managing toilet needs"},
-        {title: "Q8 Dressing and undressing"},
-        {title: "Q9 Communicating"},
-        {title: "Q10 Reading"},
-        {title: "Q11 Mixing with other people"},
-        {title: "Q12 Making decisions about money"},
-        {title: "Q13 Going out"},
-        {title: "Q14 Moving around"}
-        ],1)
+        //{title: "Q4 Eating and drinking"},
+        //{title: "Q5 Managing treatments"},
+        //{title: "Q6 Washing and bathing"},
+        //{title: "Q7 Managing toilet needs"},
+        {title: "Q8 Dressing and undressing"}
+        //{title: "Q9 Communicating"},
+        //{title: "Q10 Reading"},
+        //{title: "Q11 Mixing with other people"},
+        //{title: "Q12 Making decisions about money"},
+        //{title: "Q13 Going out"},
+        //{title: "Q14 Moving around"}
+        ],2)
 //    - var section = "Sibling categories"
 //    +sidebar([
 //        ])
