--- a/libs/jade/cards.jade
+++ b/libs/jade/cards.jade
@@ -10,6 +10,21 @@ block breadcrumbs
 		{title: "Modules", href: "index.html#modules"}, 
 		{title: "Cards"}])
 
+block sidebar
+	- var section = "Modules"
+	+sidebar([
+		{href: "callout.html", title: "Callout"},
+		{href: "collapse.html", title: "Collapse"},
+		{href: "charts.html", title: "Charts"},
+		{href: "section-notice.html", title: "Section Notices"},
+		{href: "toolbar.html", title: "Content toolbar"},
+		{href: "cookie-monster.html", title: "Cookie Monster"},
+		{href: "extent.html", title: "Extent Switcher"},
+		{href: "overlay.html", title: "Modal/Overlay"},
+		{href: "reference.html", title: "Reference tool"}
+		{href: "cards.html", title: "Cards"}
+	],8)
+
 block content
 	.articleContent
 		div
