--- a/libs/base/type.less
+++ b/libs/base/type.less
@@ -129,12 +129,14 @@ small {
 a {
     color: @link-color;
     text-decoration: none;
-    border-bottom: 1px solid lighten(@link-color, 50%);
+    border-bottom: 1px solid lighten(@link-color, 40%);
     
     &:hover,
     &:focus {
         color: @link-hover-color;
         text-decoration: none;
+        border-bottom: 1px solid @link-color;
+        //background-color:  lighten(@link-color, 70%);
     }
 
     &:active {
