--- a/libs/modules/references.less
+++ b/libs/modules/references.less
@@ -39,6 +39,9 @@
 	        bottom: -0.05em;
 	        margin: 0 0 0 .25em;
 	    }
+        &:hover:after {
+        	content: "\f006";
+        }
 	} 
 }
 
@@ -46,12 +49,15 @@
 	a {
 		color: @blue;
 	    &:after {
-	        content: "\f005";
+	        content: "\f006";
 	        color: @blue-light;
 	        &:extend(.a-social-top-);
 	        bottom: -0.05em;
 	        margin: 0 0 0 .25em;
 	    }
+        &:hover:after {
+        	content: "\f005";
+        }
 	}
 }
 
