--- a/public/css/site.css
+++ b/public/css/site.css
@@ -11594,14 +11594,20 @@ html[lang="en-SCT"] .side-nav > h2 {
   bottom: -0.05em;
   margin: 0 0 0 .25em;
 }
+.ref-heading__toggle--on a:hover:after {
+  content: "\f006";
+}
 .ref-heading__toggle--off a {
   color: #003C64;
 }
 .ref-heading__toggle--off a:after {
-  content: "\f005";
+  content: "\f006";
   color: #A5BDDC;
   bottom: -0.05em;
   margin: 0 0 0 .25em;
+}
+.ref-heading__toggle--off a:hover:after {
+  content: "\f005";
 }
 /* Called this out and refactored, test on site
 
