Updated exclamation icon on red buttons

--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -97,7 +97,7 @@
 
 
 .exclamation-button-icon {
-    .btn-icon("\0021");
+    .btn-icon("\f06a");
 }
 .search-button-icon {
     .btn-icon("\f002");
