--- a/public/css/site.css
+++ b/public/css/site.css
@@ -5308,7 +5308,7 @@ input.custom-dropdown__button {
   right: 1em;
   font-family: 'Helvetica', 'FontAwesome';
   font-weight: 300;
-  content: "\0021";
+  content: "\f06a";
   color: #FFF;
   text-align: center;
   position: absolute;
