--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -119,6 +119,11 @@ html
 				h2.screenreader Notice
 				.section-notice__content
 					button.btn.btn-small(type="button") #[a(href="adviser.html") Adviser login]
+			header.main-header
+				.main-header__content.main-content
+					a.main-header__logo.no-print(href="index.html", title="Citizens Advice home")
+						img(alt="Citizens Advice", onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;", src="assets/images/ca-logo_100px.svg")
+					img.print-only.logo(src="assets/images/ca-logo-hz-280px.svg")
 
 		else if logoutheader
 			aside.section-notice__login
