--- a/libs/jade/typography.jade
+++ b/libs/jade/typography.jade
@@ -81,3 +81,8 @@ block content
 						li Lorem ipsum dolor sit amet
 						li Lorem ipsum dolor sit amet
 				li Lorem ipsum dolor sit amet
+
+			ul.tick
+				li Lorem ipsum dolor sit amet
+			ul.cross
+				li Lorem ipsum dolor sit amet
