--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -174,7 +174,7 @@ ol li, ul li {
 
 figure {
     display: block;
-    background-color: @white;
+    background-color: @heritage-blue-lightest;
     border: 1px solid @blue-light;
     border-radius: @form-border-radius;
     .spacing(padding,1);
