--- a/public/css/site.css
+++ b/public/css/site.css
@@ -2457,7 +2457,7 @@ ul li {
 */
 figure {
   display: block;
-  background-color: #FFF;
+  background-color: #f2f8ff;
   border: 1px solid #A5BDDC;
   border-radius: 2px;
   padding: 16px;
@@ -6115,6 +6115,28 @@ li > ol {
   line-height: 1;
   position: relative;
   bottom: .3em;
+}
+.tick ul {
+  padding: 0px 0px 0px 32px;
+  padding: 0rem 0rem 0rem 2rem;
+  list-style: none;
+}
+.tick ul > li:before {
+  margin: 0px 4px 0px -8px;
+  margin: 0rem 0.25rem 0rem -0.5rem;
+  font-family: 'FontAwesome';
+  content: '\f00c';
+}
+.cross ul {
+  padding: 0px 0px 0px 32px;
+  padding: 0rem 0rem 0rem 2rem;
+  list-style: none;
+}
+.cross ul > li:before {
+  margin: 0px 4px 0px -8px;
+  margin: 0rem 0.25rem 0rem -0.5rem;
+  font-family: 'FontAwesome';
+  content: '\f00d';
 }
 /**
  * TYPE
