--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -174,6 +174,7 @@
  */
 
 @inner-shadow:  inset 0 10px 10px -13px, inset 0 -10px 10px -13px;
+@outer-shadow: 0 1px 3px 0 @gray-8, 0 0 0 1px @gray-8;
 
 /***************************************************************************
  * FORMS
