Update example and index page

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -28,6 +28,8 @@ block content
 						a(href="tables.html") Tables
 					li
 						a(href="new-grid.html") New grid layout
+					//li
+					//	a(href="new-grid-examples.html") New grid examples
 					li
 						h4#forms Forms
 						ul
@@ -41,14 +43,20 @@ block content
 			.span4
 				h2#modules Modules
 				ul
+					//li
+					//	a(href="cards.html") Cards
 					li
 						a(href="callout.html") Callout
 					li
 						a(href="collapse.html") Collapse
 					li
 						a(href="charts.html") Charts
+					//li
+					//	a(href="descriptions.html") Captions
 					li
 						a(href="section-notice.html") Section Notices
+					//li
+					//	a(href="section-notice-dev.html") Section Notice Development
 					li
 						a(href="toolbar.html") Content toolbar
 					li
@@ -73,3 +81,15 @@ block content
 					//	a(href="advisor.html") Advisor content
 					li
 						a(href="section-index.html") Section index
+					//li
+					//	a(href="employment-checker.html") Example of in-content tool
+
+					// Example PIP content  
+					//li
+					//	a(href="pip-index.html") Help with filling out PIP2 form
+					//li
+					//	a(href="pip-contents.html") PIP contents page
+					//li
+					//	a(href="pip-dressing.html") PIP help with getting dressed question
+					//li
+					//	a(href="pip-cooking.html") PIP preparing and cooking food question
