Add jade build process

--- a/libs/jade/pip-contents.jade
+++ b/libs/jade/pip-contents.jade
@@ -39,7 +39,7 @@ block content
         div
 
             .steps
-                #[a.steps__link(href="#") #[span.steps--number 1]
+                #[a.steps__link(href="#") #[span.steps--number 1]]
                 b Check if you need permission or approval
                 p Avoid costly penalties by checking if you need building regulations approval for home improvements, planning permission for building work, or permission as a leaseholder.]
 
