Copy images and js to public

--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -21,17 +21,17 @@ html
 		meta(content="B53C5C20449FC2233D3862B4DBEDFA3E", name="msvalidate.01")
 
 		// Stylesheets
-		link(href="../libs/vendors/prism/prism.css", rel="stylesheet")
+		link(href="css/prism.css", rel="stylesheet")
 		link(href="css/site.css", rel="stylesheet")
 		link(href="https://www.citizensadvice.org.uk/static/layout/favicon.ico", rel="shortcut icon")
 		link(href="https://www.citizensadvice.org.uk/static/images/apple-touch-icon.png", rel="apple-touch-icon")
 
 		// Javascript
-		script(src="../libs/javascript/vendor/jquery-1.11.3.min.js")
-		script(src="../libs/javascript/beta-dap-accordion.js")
-		script(src="../libs/javascript/collapse.js")
-		script(src="../libs/vendors/prism/prism.js")
-		script(src="../libs/javascript/smooth.js")
+		script(src="js/vendor/jquery-1.11.3.min.js")
+		script(src="js/beta-dap-accordion.js")
+		script(src="js/collapse.js")
+		script(src="js/prism.js")
+		script(src="js/smooth.js")
 		script.
 			var filename = document.location.pathname.match(/[^\/]+$/)[0];
 			$(document).ready(function() {
