Resolve remaining broken references

--- a/libs/jade/charts.jade
+++ b/libs/jade/charts.jade
@@ -14,8 +14,8 @@ block sidebar
 	include ../template/sidebar-modules.jade
 
 block script
-	script(src="../libs/javascript/vendor/highcharts/highcharts.js")
-	script(src="../libs/javascript/vendor/highcharts/modules/exporting.js")
+	script(src="js/vendor/highcharts/highcharts.js")
+	script(src="js/vendor/highcharts/modules/exporting.js")
 	script.
 		// Column chart
 		$(function () {
