--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -23,8 +23,8 @@ html
 		// Stylesheets
 		link(href="css/prism.css", rel="stylesheet")
 		link(href="css/site.css", rel="stylesheet")
-		link(href="https://www.citizensadvice.org.uk/static/layout/favicon.ico", rel="shortcut icon")
-		link(href="https://www.citizensadvice.org.uk/static/images/apple-touch-icon.png", rel="apple-touch-icon")
+		link(href="images/favicon/32.png", rel="shortcut icon")
+		link(href="images/favicon/228.png", rel="apple-touch-icon")
 
 		// Javascript
 		script(src="js/vendor/jquery-1.11.3.min.js")
@@ -56,15 +56,15 @@ html
 			//header.styleguide--header.mockup
 				.styleguide--header--content
 					a(href="index.html")
-						img(src="assets/images/ca-logo-hz-white-280px.svg")
+						img(src="images/ca-logo-hz-white-280px.svg")
 			header.main-header
 				.main-header__content
 					a.main-header__logo.no-print(href="index.html", title="Citizens Advice home")
-						img(alt="Citizens Advice", src="assets/images/ca-logo_100px.svg")
+						img(alt="Citizens Advice", src="images/ca-logo_100px.svg")
 					a.main-header__logo.no-print.wide(href="index.html", title="Citizens Advice home")
-						img(alt="Citizens Advice", src="assets/images/ca-logo-hz-white-280px.svg")
+						img(alt="Citizens Advice", src="images/ca-logo-hz-white-280px.svg")
 					a.main-header__logo.print-only(href="index.html", title="Citizens Advice home")
-						img(alt="Citizens Advice", src="assets/images/ca-logo-hz-280px.svg")
+						img(alt="Citizens Advice", src="images/ca-logo-hz-280px.svg")
 
 					.main-header__links(data-track-zone="top-bar")
 						a.main-header__menu-link.js-toggle-menu(href="")
@@ -122,8 +122,8 @@ html
 			header.main-header
 				.main-header__content.main-content
 					a.main-header__logo.no-print(href="index.html", title="Citizens Advice home")
-						img(alt="Citizens Advice", onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;", src="assets/images/ca-logo_100px.svg")
-					img.print-only.logo(src="assets/images/ca-logo-hz-280px.svg")
+						img(alt="Citizens Advice", onerror="this.onerror=null;this.src=&#39;images/ca-logo_100px.svg.png&#39;;", src="images/ca-logo_100px.svg")
+					img.print-only.logo(src="images/ca-logo-hz-280px.svg")
 
 		else if logoutheader
 			aside.section-notice__login
@@ -133,19 +133,19 @@ html
 			header.main-header
 				.main-header__content.main-content
 					a.main-header__logo.no-print(href="index.html", title="Citizens Advice home")
-						img(alt="Citizens Advice", onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;", src="assets/images/ca-logo_100px.svg")
-					img.print-only.logo(src="assets/images/ca-logo-hz-280px.svg")
+						img(alt="Citizens Advice", onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;", src="images/ca-logo_100px.svg")
+					img.print-only.logo(src="images/ca-logo-hz-280px.svg")
 
 		else
 			header.styleguide--header
 				.styleguide--header--content
 					a(href="index.html")
-						img(src="assets/images/ca-logo-hz-white-280px.svg")
+						img(src="images/ca-logo-hz-white-280px.svg")
 			//header.main-header
 				.main-header__content.main-content
 					a.main-header__logo.no-print(href="index.html", title="Citizens Advice home")
-						img(alt="Citizens Advice", onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;", src="assets/images/ca-logo_100px.svg")
-					img.print-only.logo(src="assets/images/ca-logo-hz-280px.svg")
+						img(alt="Citizens Advice", onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;", src="images/ca-logo_100px.svg")
+					img.print-only.logo(src="images/ca-logo-hz-280px.svg")
 
 		.main-container
 			nav.main-breadcrumb
@@ -271,7 +271,7 @@ html
 					.main-footer__box.main-footer__box--copyright
 						div
 							p 
-								img(alt="", height="100", src="assets/images/ca-logo_100px.svg", width="100")
+								img(alt="", height="100", src="images/ca-logo_100px.svg", width="100")
 								| Copyright © 2015 Citizens Advice. All rights reserved.
 								br
 								| Citizens Advice is an operating name of the National Association of Citizens Advice Bureaux. Registered charity number 279057
@@ -285,7 +285,7 @@ html
 				.styleguide--footer
 					div
 						p
-							img(alt="", height="100", src="assets/images/ca-logo_100px.svg", width="100")
+							img(alt="", height="100", src="images/ca-logo_100px.svg", width="100")
 							| Copyright © 2015 Citizens Advice. All rights reserved.
 							br
 							| Citizens Advice is an operating name of the National Association of Citizens Advice Bureaux. Registered charity number 279057
@@ -295,5 +295,5 @@ html
 							| Registered office: Citizens Advice, 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
 								
 		<!--[if IE 8]></div><![endif]-->
-		script(src="../libs/javascript/advisor.js")
-		script(src="../libs/javascript/core.js")
+		script(src="js/advisor.js")
+		script(src="js/core.js")
