Update cards page

--- a/libs/jade/cards.jade
+++ b/libs/jade/cards.jade
@@ -23,7 +23,7 @@ block content
 				label Basic card
 				.cards
 					.card-image-top
-						img(src="assets/images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice")
+						img(src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice")
 					.card-text
 						h3 Title
 						p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
@@ -31,7 +31,7 @@ block content
 				code.language-html
 					| &lt;div class="cards"&gt;
 					| &lt;div class="card-image-top"&gt;
-					| &lt;img src="assets/images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
+					| &lt;img src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
 					| &lt;/div&gt;
 					| &lt;div class="card-text"&gt;
 					| 	&lt;h3&gt;Title&lt;/h3&gt;
@@ -48,7 +48,7 @@ block content
 							p Header
 						.span6
 							.card-image-left
-								img(src="assets/images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice")
+								img(src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice")
 						.span6
 							.card-text-left
 								p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
@@ -58,7 +58,7 @@ block content
 					| &lt;div class="row"&gt;
 					| &lt;div class="span6"&gt;
 					| &lt;div class="card-image-left"&gt;
-					| &lt;img src="assets/images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
+					| &lt;img src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
 					| &lt;/div&gt;
 					| &lt;div class="span6"&gt;
 					| &lt;div class="card-text-left"&gt;
@@ -78,13 +78,13 @@ block content
 							.card-banner-top(style="color:#fff; background-color:#004b88;")
 								p Header
 							.card-image-top
-								img(src="assets/images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice")
+								img(src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice")
 							.card-text
 								p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
 					.span6
 						.cards
 							.card-image-top
-								img(src="assets/images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice")
+								img(src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice")
 							.card-text
 								h3 Title
 								p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
@@ -98,7 +98,7 @@ block content
 					| &lt;div class="card-banner-top"&gt;
 					| 	&lt;h3&gt;Header&lt;/h3&gt;
 					| &lt;div class="card-image-top"&gt;
-					| &lt;img src="assets/images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
+					| &lt;img src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
 					| &lt;/div&gt;
 					| &lt;div class="card-text"&gt;
 					| 	&lt;h3&gt;Title&lt;/h3&gt;
@@ -116,7 +116,7 @@ block content
 							.card-banner-top(style="background-color:#006278;")
 								p(style="color:#fff;") Campaigns
 							.card-image-top
-								img(src="assets/images/mother_with_children.jpg" alt="Mother with two daughters")
+								img(src="images/mother_with_children.jpg" alt="Mother with two daughters")
 							.card-text
 								p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
 								button.btn.btn-primary.right-button-icon(type="button") Continue
@@ -126,7 +126,7 @@ block content
 							.card-banner-top
 								p(style="color:#fff;") Policy
 							.card-image-top
-								img(src="assets/images/laptop-branding.png" alt="Laptop")
+								img(src="images/laptop-branding.png" alt="Laptop")
 							.card-text
 								p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
 								button.btn.btn-primary.right-button-icon(type="button" style="background-color:#FFBF47; border-color:#FFBF47;") Continue
@@ -139,7 +139,7 @@ block content
 					| &lt;div class="card-banner-top"&gt;
 					| 	&lt;h3&gt;Header&lt;/h3&gt;
 					| &lt;div class="card-image-top"&gt;
-					| &lt;img src="assets/images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
+					| &lt;img src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
 					| &lt;/div&gt;
 					| &lt;div class="card-text"&gt;
 					| 	&lt;h3&gt;Title&lt;/h3&gt;
