Update to section page

--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -280,7 +280,7 @@ pre[class*="language-"] {
     border-radius: .25rem;
     margin-bottom: .75rem;
     box-shadow: 0 2px 0 0 @gray-7,0 1px 3px 0 @gray-7;
-    background-color: @gray-8;
+    background-color: @white;
     .card-banner-top {
         border-radius: @form-border-radius @form-border-radius 0 0;
         :first-child {
