--- a/libs/jade/section-index-dev.jade
+++ b/libs/jade/section-index-dev.jade
@@ -22,6 +22,8 @@ block content
 	.articleContent
 		.row
 			.span8
+				p Find out about the #[a(href="https://www.citizensadvice.org.uk/about-us/how-citizens-advice-works/citizens-advice-consumer-work/the-consumer-rights-act-2015/" target="_blank") Consumer Rights Act 2015] and what's changed.
+			.span8
 				.beta-index-page__box.col-md-12.col-sm-12
 					.beta-index-page__section.col-md-12.col-sm-12
 						h2 Cars and vehicles
@@ -115,16 +117,21 @@ block content
 								a(href="#") Template letters
 			.span4
 				.cards
+					.card-text(style="background-color:#FFEBC6;")
+						h3 Consumer helpline
+						p Contact the Citizens Advice consumer helpline on #[strong 03454 04 05 06] if you need help - a trained adviser can give you advice over the phone.
+				//.cards
 					.card-banner-top(style="color:#fff; background-color:#004b88;")
 						p Header
 					.card-image-top
-						img(src="assets/images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice")
+						img(src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice")
 					.card-text
+						h3 #[a(href="#") Header]
 						p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
-				.cards(style="color:#fff; background-color:#57486B;")
+				//.cards(style="color:#fff; background-color:#57486B;")
 					.card-banner-top
 						p(style="color:#fff;") Campaigns
-						img(src="assets/images/laptop-branding.png" alt="Laptop")
+						img(src="images/laptop-branding.png" alt="Laptop")
 					.card-text
 						p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
 						button.btn.btn-primary.right-button-icon(type="button" style="background-color:#FFBF47; border-color:#FFBF47;") Continue
